atualização dockerfile