@@ -1,10 +1,14 @@
-FROM openjdk:17
-WORKDIR /tecnologia
+FROM gradle:jdk17-alpine AS build
+COPY --chown=gradle:gradle . /home/gradle/src
+WORKDIR /home/gradle/src
+RUN gradle build --no-daemon
 
-CMD ["./gradlew", "clean", "bootJar"]
-
-COPY build/libs/*.jar tecnologia.jar
+FROM openjdk:17.0.2-jdk-slim
 
 EXPOSE 8080
 
-ENTRYPOINT ["java", "-jar","/tecnologia.jar"]
+RUN mkdir /blog
+
+COPY --from=build /home/gradle/src/build/libs/*.jar /blog/tecnologia.jar
+
+ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/blog/tecnologia.jar"]
